fix issue from last commit

--- a/notebooks/compute_region_instance_proposals.ipynb
+++ b/notebooks/compute_region_instance_proposals.ipynb
@@ -2100,37 +2100,21 @@
     "    \n",
     "\n",
     "    \n",
-    "    if REMOVE_REDUNDANT_INSTANCES:\n",
-    "        \n",
-    "        pairwise_iou = pairwise_masks_iou(masks)         #(M,M)\n",
-    "        overlapping = pairwise_iou > MASK_IOU_THRESHOLD  #(M,M)\n",
-    "        \n",
-    "        nonredundant_instance_inds = set()\n",
-    "        for ind in range(masks.shape[1]):\n",
-    "\n",
-    "            redundant = False\n",
-    "            overlapping_instance_inds = np.where(overlapping[ind])[0]\n",
-    "            for oi_ind in overlapping_instance_inds:\n",
-    "                if oi_ind in nonredundant_instance_inds:\n",
-    "                    redundant = True\n",
-    "                    break\n",
-    "\n",
-    "            if not redundant:\n",
-    "                nonredundant_instance_inds.add(ind)\n",
-    "\n",
-    "        nonredundant_instance_inds = list(nonredundant_instance_inds)\n",
-    "        \n",
-    "        masks = masks[:, nonredundant_instance_inds]\n",
-    "        mask_feats = mask_feats[nonredundant_instance_inds, :]\n",
-    "    \n",
-    "#     print(masks.shape)\n",
-    "#     print(mask_feats.shape)\n",
-    "    \n",
     "    instance_preds = np.argmax(mask_feats @ label_feats.T, axis=1).astype(int)\n",
     "    \n",
-    "    instance_min_max_bounds = []\n",
+    "    \n",
+    "    instance_boxes = []\n",
     "    for i in range(masks.shape[1]):\n",
     "        instance_points = points[masks[:,i]].astype(np.float16)\n",
+    "        \n",
+    "        instance_pcd = o3d.geometry.PointCloud()\n",
+    "        instance_pcd.points = o3d.utility.Vector3dVector(instance_points)\n",
+    "        \n",
+    "        instance_boxes.append(\n",
+    "            instance_pcd.get_axis_aligned_bounding_box()\n",
+    "        )\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        min_bound = np.min(instance_points, axis=0)\n",
     "        max_bound = np.max(instance_points, axis=0)\n",
@@ -2139,23 +2123,25 @@
     "            (min_bound, max_bound)\n",
     "        )\n",
     "        \n",
+    "\n",
     "        \n",
-    "    out = {\n",
-    "        \"points\": points,\n",
-    "        \"masks\": masks,\n",
-    "        \"instance_preds\": instance_preds,\n",
-    "        \"instance_min_max_bounds\": tuple(instance_min_max_bounds),\n",
-    "        \"label_to_ind\": label_to_ind,\n",
-    "    }\n",
+    "        \n",
+    "#     out = {\n",
+    "#         \"points\": points,\n",
+    "#         \"masks\": masks,\n",
+    "#         \"instance_preds\": instance_preds,\n",
+    "#         \"instance_min_max_bounds\": tuple(instance_min_max_bounds),\n",
+    "#         \"label_to_ind\": label_to_ind,\n",
+    "#     }\n",
     "    \n",
-    "    save_filename = os.path.basename(dp.data_3d_path).replace('.pth', '.pkl')\n",
-    "    save_path = os.path.join(\n",
-    "        os.path.join(OUTPUT_DIR, save_dirname, save_filename),\n",
-    "    )\n",
+    "#     save_filename = os.path.basename(dp.data_3d_path).replace('.pth', '.pkl')\n",
+    "#     save_path = os.path.join(\n",
+    "#         os.path.join(OUTPUT_DIR, save_dirname, save_filename),\n",
+    "#     )\n",
     "    \n",
     "    \n",
-    "    with open(save_path, 'wb') as f:\n",
-    "        pickle.dump(out, f)"
+    "#     with open(save_path, 'wb') as f:\n",
+    "#         pickle.dump(out, f)"
    ]
   },
   {
