change to checking iou of proposal boxes and not the masks

--- a/notebooks/compute_region_instance_proposals.ipynb
+++ b/notebooks/compute_region_instance_proposals.ipynb
@@ -1828,7 +1828,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37efb9f4710248eab8e2a58e65efbd8f",
+       "model_id": "fc1d31641a244f028229d94fe33c56b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1984,39 +1984,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 62,
    "id": "f0ea5eae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "REMOVE_REDUNDANT_INSTANCES = True\n",
+    "REMOVE_REDUNDANT_INSTANCES = False\n",
     "\n",
-    "MASK_IOU_THRESHOLD = 0.4"
+    "IOU_THRESHOLD = 0.8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 63,
    "id": "7d4ddd12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pairwise_masks_iou(masks):\n",
-    "    \"\"\"\n",
-    "    Given masks of shape (N,M), where N is the number of points\n",
-    "    and M is the number of masks\n",
-    "    \"\"\"\n",
-    "#     print(masks.shape)\n",
+    "def aabb_intersect(\n",
+    "    min_1, max_1, \n",
+    "    min_2, max_2\n",
+    "):\n",
+    "    if np.any(max_1 < min_2) or np.any(max_2 < min_1):\n",
+    "        return False\n",
     "    \n",
-    "    masks = torch.tensor(masks).to(torch.float16).to('cuda')\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "322a9367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aabb_iou(    \n",
+    "    min_1, max_1, \n",
+    "    min_2, max_2\n",
+    "):\n",
+    "    EPS = 1e-5  # could have zero volume (e.g. 2D) boxes\n",
     "    \n",
-    "    intersection = masks.T @ masks\n",
+    "    intersect_min = np.maximum(min_1, min_2)\n",
+    "    intersect_max = np.minimum(max_1, max_2)\n",
     "    \n",
-    "    masks_sum = masks.sum(dim=0)\n",
+    "    intersect_lengths = np.maximum(0, intersect_max - intersect_min)\n",
     "    \n",
-    "    union = masks_sum[:, None] + masks_sum[None, :] - intersection\n",
+    "    intersect_volume = np.prod(intersect_lengths) + EPS\n",
     "    \n",
-    "    return (intersection / union).cpu().numpy()"
+    "    volume_1 = np.prod(max_1 - min_1) + EPS\n",
+    "    volume_2 = np.prod(max_2 - min_2) + EPS\n",
+    "    \n",
+    "    return intersect_volume / (volume_1 + volume_2 - intersect_volume)"
    ]
   },
   {
@@ -2029,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 77,
    "id": "259c7690",
    "metadata": {},
    "outputs": [
@@ -2037,7 +2055,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving to: /home/rsl_admin/openmask3d/labeled_instance_outputs/filt_iou_0.4/object-test\n"
+      "saving to: /home/rsl_admin/openmask3d/labeled_instance_outputs/object-test\n"
      ]
     }
    ],
@@ -2045,7 +2063,7 @@
     "save_dirname = f\"{labelset_name}-{split}\"\n",
     "\n",
     "if REMOVE_REDUNDANT_INSTANCES:\n",
-    "    save_dirname = f\"filt_iou_{MASK_IOU_THRESHOLD}/{save_dirname}\"\n",
+    "    save_dirname = f\"filt_iou_{IOU_THRESHOLD}/{save_dirname}\"\n",
     "\n",
     "os.makedirs(\n",
     "    os.path.join(OUTPUT_DIR, save_dirname),\n",
@@ -2057,14 +2075,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 78,
    "id": "632ea516",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e024b3a8588406eb3884fbf25d24e5e",
+       "model_id": "1f1c2bfa321042d195d8c4df8a63bb70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2099,49 +2117,71 @@
     "    assert masks.shape[1] == mask_feats.shape[0]\n",
     "    \n",
     "\n",
-    "    \n",
-    "    instance_preds = np.argmax(mask_feats @ label_feats.T, axis=1).astype(int)\n",
-    "    \n",
-    "    \n",
     "    instance_boxes = []\n",
     "    for i in range(masks.shape[1]):\n",
     "        instance_points = points[masks[:,i]].astype(np.float16)\n",
     "        \n",
-    "        instance_pcd = o3d.geometry.PointCloud()\n",
-    "        instance_pcd.points = o3d.utility.Vector3dVector(instance_points)\n",
-    "        \n",
-    "        instance_boxes.append(\n",
-    "            instance_pcd.get_axis_aligned_bounding_box()\n",
-    "        )\n",
-    "        \n",
-    "        \n",
-    "        \n",
     "        min_bound = np.min(instance_points, axis=0)\n",
     "        max_bound = np.max(instance_points, axis=0)\n",
     "        \n",
-    "        instance_min_max_bounds.append(\n",
+    "        instance_boxes.append(\n",
     "            (min_bound, max_bound)\n",
     "        )\n",
     "        \n",
     "\n",
+    "    if REMOVE_REDUNDANT_INSTANCES:\n",
+    "\n",
+    "        nr_box_inds = []\n",
+    "        \n",
+    "        for box_1_ind, box_1 in enumerate(instance_boxes):\n",
+    "            redundant = False\n",
+    "            \n",
+    "            for box_2_ind in nr_box_inds:\n",
+    "                box_2 = instance_boxes[box_2_ind]\n",
+    "                             \n",
+    "                if not aabb_intersect(box_1[0], box_1[1], box_2[0], box_2[1]):\n",
+    "                    continue\n",
+    "                    \n",
+    "                iou = aabb_iou(box_1[0], box_1[1], box_2[0], box_2[1])\n",
+    "                if iou > IOU_THRESHOLD:\n",
+    "                    redundant = True\n",
+    "                    break\n",
+    "            \n",
+    "            if not redundant:\n",
+    "                nr_box_inds.append(box_1_ind)\n",
     "        \n",
     "        \n",
-    "#     out = {\n",
-    "#         \"points\": points,\n",
-    "#         \"masks\": masks,\n",
-    "#         \"instance_preds\": instance_preds,\n",
-    "#         \"instance_min_max_bounds\": tuple(instance_min_max_bounds),\n",
-    "#         \"label_to_ind\": label_to_ind,\n",
-    "#     }\n",
+    "#         print(len(instance_boxes))\n",
+    "#         print(len(nr_box_inds))\n",
+    "        \n",
     "    \n",
-    "#     save_filename = os.path.basename(dp.data_3d_path).replace('.pth', '.pkl')\n",
-    "#     save_path = os.path.join(\n",
-    "#         os.path.join(OUTPUT_DIR, save_dirname, save_filename),\n",
-    "#     )\n",
+    "        masks = masks[:, nr_box_inds]\n",
+    "        mask_feats = mask_feats[nr_box_inds, :]\n",
+    "        \n",
+    "        instance_boxes = [\n",
+    "            box for i, box in enumerate(instance_boxes) if i in nr_box_inds\n",
+    "        ]\n",
+    "        \n",
+    "        \n",
+    "    instance_preds = np.argmax(mask_feats @ label_feats.T, axis=1).astype(int)\n",
+    "\n",
+    "    \n",
+    "    out = {\n",
+    "        \"points\": points,\n",
+    "        \"masks\": masks,\n",
+    "        \"instance_preds\": instance_preds,\n",
+    "        \"instance_min_max_bounds\": tuple(instance_boxes),\n",
+    "        \"label_to_ind\": label_to_ind,\n",
+    "    }\n",
+    "    \n",
+    "    save_filename = os.path.basename(dp.data_3d_path).replace('.pth', '.pkl')\n",
+    "    save_path = os.path.join(\n",
+    "        os.path.join(OUTPUT_DIR, save_dirname, save_filename),\n",
+    "    )\n",
     "    \n",
     "    \n",
-    "#     with open(save_path, 'wb') as f:\n",
-    "#         pickle.dump(out, f)"
+    "    with open(save_path, 'wb') as f:\n",
+    "        pickle.dump(out, f)"
    ]
   },
   {
@@ -2154,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 79,
    "id": "97945f5f",
    "metadata": {},
    "outputs": [],
@@ -2164,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 80,
    "id": "cf6de0ca",
    "metadata": {},
    "outputs": [],
@@ -2174,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 81,
    "id": "d89d8563",
    "metadata": {},
    "outputs": [
@@ -2203,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 82,
    "id": "97d201eb",
    "metadata": {},
    "outputs": [],
@@ -2217,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 83,
    "id": "e85fa8c3",
    "metadata": {},
    "outputs": [],
@@ -2228,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 84,
    "id": "4ec9f846",
    "metadata": {},
    "outputs": [
@@ -2246,14 +2286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 85,
    "id": "a8526197",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a20a20eff77545178f990a80bccd73f6",
+       "model_id": "bd0527dc8b454814a87adceda855aa8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2276,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 86,
    "id": "f5614bb8",
    "metadata": {},
    "outputs": [],
@@ -2312,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 87,
    "id": "27ba0fdf",
    "metadata": {},
    "outputs": [],
