rename notebooks directory to comparison_eval

--- a/comparison_eval/compute_region_instance_proposals.ipynb
+++ b/comparison_eval/compute_region_instance_proposals.ipynb
@@ -1828,7 +1828,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc1d31641a244f028229d94fe33c56b8",
+       "model_id": "fb5b925ec44d43a0aeb1fde0ab79e2c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1894,7 +1894,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'chair': 0, 'table': 1, 'picture': 2, 'cabinet': 3, 'cushion': 4, 'sofa': 5, 'bed': 6, 'chest_of_drawers': 7, 'plant': 8, 'sink': 9, 'toilet': 10, 'stool': 11, 'towel': 12, 'tv_monitor': 13, 'shower': 14, 'bathtub': 15, 'counter': 16, 'fireplace': 17, 'gym_equipment': 18, 'seating': 19, 'clothes': 20, 'other': 21}\n"
+      "{'bathroom': 0, 'bedroom': 1, 'closet': 2, 'dining room': 3, 'garage': 4, 'hallway': 5, 'library': 6, 'laundryroom/mudroom': 7, 'kitchen': 8, 'living room': 9, 'meetingroom/conferenceroom': 10, 'office': 11, 'porch/terrace/deck/driveway': 12, 'rec/game': 13, 'stairs': 14, 'utilityroom/toolroom': 15, 'tv': 16, 'workout/gym/exercise': 17, 'balcony': 18, 'bar': 19, 'classroom': 20, 'spa/sauna': 21, 'entryway/foyer/lobby': 22, 'outdoor': 23, 'dining booth': 24, 'other room': 25}\n"
      ]
     }
    ],
@@ -1962,7 +1962,7 @@
      "text": [
       "Loading CLIP ViT-L/14@336px model...\n",
       "Finish loading\n",
-      "(22, 768)\n"
+      "(26, 768)\n"
      ]
     }
    ],
@@ -1984,19 +1984,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "id": "f0ea5eae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "REMOVE_REDUNDANT_INSTANCES = False\n",
+    "REMOVE_REDUNDANT_INSTANCES = True\n",
     "\n",
-    "IOU_THRESHOLD = 0.8"
+    "IOU_THRESHOLD = 0.6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "id": "7d4ddd12",
    "metadata": {},
    "outputs": [],
@@ -2013,8 +2013,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "322a9367",
+   "execution_count": 71,
+   "id": "5b43a379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "id": "259c7690",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2055,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving to: /home/rsl_admin/openmask3d/labeled_instance_outputs/object-test\n"
+      "saving to: /home/rsl_admin/openmask3d/labeled_instance_outputs/filt_iou_0.6/region-test\n"
      ]
     }
    ],
@@ -2075,14 +2075,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "632ea516",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f1c2bfa321042d195d8c4df8a63bb70",
+       "model_id": "87d4944d3b9049bc98f7cd34042ceff2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 51,
    "id": "97945f5f",
    "metadata": {},
    "outputs": [],
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
    "id": "cf6de0ca",
    "metadata": {},
    "outputs": [],
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "id": "d89d8563",
    "metadata": {},
    "outputs": [
@@ -2243,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 54,
    "id": "97d201eb",
    "metadata": {},
    "outputs": [],
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 55,
    "id": "e85fa8c3",
    "metadata": {},
    "outputs": [],
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 56,
    "id": "4ec9f846",
    "metadata": {},
    "outputs": [
@@ -2276,7 +2276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['chair', 'table', 'picture', 'cabinet', 'cushion', 'sofa', 'bed', 'chest_of_drawers', 'plant', 'sink', 'toilet', 'stool', 'towel', 'tv_monitor', 'shower', 'bathtub', 'counter', 'fireplace', 'gym_equipment', 'seating', 'clothes', 'other'])\n"
+      "dict_keys(['bathroom', 'bedroom', 'closet', 'dining room', 'garage', 'hallway', 'library', 'laundryroom/mudroom', 'kitchen', 'living room', 'meetingroom/conferenceroom', 'office', 'porch/terrace/deck/driveway', 'rec/game', 'stairs', 'utilityroom/toolroom', 'tv', 'workout/gym/exercise', 'balcony', 'bar', 'classroom', 'spa/sauna', 'entryway/foyer/lobby', 'outdoor', 'dining booth', 'other room'])\n"
      ]
     }
    ],
@@ -2286,19 +2286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 57,
    "id": "a8526197",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd0527dc8b454814a87adceda855aa8c",
+       "model_id": "cc665294014e4265a12c8a3ea86825fb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(options=('all', 'bathtub', 'bed', 'cabinet', 'chair', 'chest_of_drawers', 'clothes', 'counter', 'cush…"
+       "Dropdown(options=('all', 'balcony', 'bar', 'bathroom', 'bedroom', 'classroom', 'closet', 'dining booth', 'dini…"
       ]
      },
      "metadata": {},
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 67,
    "id": "f5614bb8",
    "metadata": {},
    "outputs": [],
@@ -2344,15 +2344,17 @@
     "    \n",
     "    instance_boxes.append(box)\n",
     "    \n",
-    "    o3d.visualization.draw_geometries(\n",
-    "        [scan_mesh, pcd, box]\n",
-    "    )\n",
+    "    \n",
+    "    \n",
+    "#     o3d.visualization.draw_geometries(\n",
+    "#         [scan_mesh, pcd, box]\n",
+    "#     )\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 68,
    "id": "27ba0fdf",
    "metadata": {},
    "outputs": [],
