commit current state

--- a/comparison_eval/visualize_matterport_scan_evaluation_outputs.ipynb
+++ b/comparison_eval/visualize_matterport_scan_evaluation_outputs.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "590571fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import open3d as o3d\n",
@@ -21,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1874b3af",
    "metadata": {},
    "outputs": [],
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6bb042a1",
    "metadata": {},
    "outputs": [],
@@ -53,24 +64,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4dcb70f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EVAL_OUTPUT_PATH = '/home/rsl_admin/openmask3d/eval_output/test_output/object_2t7WUuJeko7.pkl'\n",
+    "EVAL_OUTPUT_DIR = '/home/rsl_admin/openmask3d/eval_output/filt_iou_0.8-object-2024-05-24_18-46'\n",
     "\n",
-    "EVAL_OUTPUT_PATH = '/home/rsl_admin/openmask3d/eval_output/test_output/region_2t7WUuJeko7.pkl'\n"
+    "EVAL_OUTPUT_DIR = '/home/rsl_admin/openmask3d/eval_output/filt_iou_0.8-region-2024-05-24_19-24'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "2c7713e3-cc91-4ae9-a3be-ad76606b2823",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1be42736ab354692b383d30f992d08b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(options=('2t7WUuJeko7.pkl', '5ZKStnWn8Zo.pkl', 'ARNzJeq3xxb.pkl', 'RPmz2sHmrrY.pkl', 'UwV83HsGsw3.pkl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "select_eval_output_dropdown = widgets.Dropdown(\n",
+    "    options=sorted(os.listdir(EVAL_OUTPUT_DIR)),\n",
+    "    description='',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "display(select_eval_output_dropdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "99ab8d90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(EVAL_OUTPUT_PATH, 'rb') as f:\n",
+    "eval_output_path = os.path.join(EVAL_OUTPUT_DIR, select_eval_output_dropdown.value)\n",
+    "\n",
+    "with open(eval_output_path, 'rb') as f:\n",
     "    eval_output = pickle.load(f)"
    ]
   },
@@ -84,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "842a0fc2",
    "metadata": {},
    "outputs": [],
@@ -94,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "19141a1c",
    "metadata": {},
    "outputs": [],
@@ -112,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "92a290fd",
    "metadata": {},
    "outputs": [],
@@ -130,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6567d290",
    "metadata": {},
    "outputs": [],
@@ -151,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "6a44ba69",
    "metadata": {},
    "outputs": [],
@@ -176,10 +219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "65b5f596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70701945d0314aee83c208e23512679f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(options=('bathroom', 'bedroom', 'dining room', 'hallway', 'kitchen', 'living room', 'office', 'stairs…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "select_mpcat40_label_dropdown = widgets.Dropdown(\n",
     "    options=sorted(label_proposals.keys()),\n",
@@ -191,10 +249,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "2c04df8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d24f1cab48046c7a10ad71b13f5802c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(options=('all', 'n/a'), value='all')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "selected_label = select_mpcat40_label_dropdown.value\n",
     "tag_options = list(set(label_proposals[selected_label][\"tags\"]))\n",
@@ -209,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "cfe971a1",
    "metadata": {},
    "outputs": [],
@@ -259,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4fe3fe07",
    "metadata": {},
    "outputs": [],
@@ -281,10 +354,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "66c73339",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "908e2d2ace244469b5f1bc17459e98c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(options=('bathroom', 'bedroom', 'hallway', 'kitchen', 'living room'), value='bathroom')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "select_mpcat40_label_dropdown = widgets.Dropdown(\n",
     "    options=sorted(label_proposals.keys()),\n",
@@ -296,10 +384,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "120e6e30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93c2c5c5bdb74c9e993aaa3099b76bf2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(options=('0 | mean spl: 0.00 | confidence: 1.0', '1 | mean spl: 0.00 | confidence: 1.0', '2 | mean sp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "selected_label = select_mpcat40_label_dropdown.value\n",
     "proposals = label_proposals[selected_label]\n",
@@ -324,10 +427,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c89d8c90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "selected proposal index: 3\n"
+     ]
+    }
+   ],
    "source": [
     "if len(proposals[\"boxes\"]) == 0:\n",
     "    raise Exception(\"label has no associated proposals\")\n",
